[gd_scene load_steps=2 format=3 uid="uid://11hurwe8pe2f"]

[ext_resource type="Script" uid="uid://cyaq2n6rv8vqq" path="res://Scripts/options.gd" id="1_prnvy"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prnvy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioController" type="HScrollBar" parent="VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "MUTE"

[node name="Resolutionlbl" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resolution"
horizontal_alignment = 1

[node name="Resolution" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "1600x900"
popup/item_0/id = 0
popup/item_1/text = "1080x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="Modelbl" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MODE"
horizontal_alignment = 1

[node name="Mode" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Full Screen"
popup/item_1/id = 1

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "BACK"

[connection signal="pressed" from="VBoxContainer/Mute" to="." method="_on_mute_pressed"]
[connection signal="item_selected" from="VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Mode" to="." method="_on_mode_item_selected"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
